--- a/hugo.toml
+++ b/hugo.toml
@@ -13,7 +13,7 @@ googleAnalytics = "G-TR1N34LB3Y"
 enableRobotsTXT = true
 
 [params]
-author = "Steve Moss"
+author = "Dr Steve Moss"
 intro = "Scientist, technologist, engineer, and technical leader."
 description = "I help companies deploy their code into production. I write about distributed systems, tooling, and best practices."
 authorimage = "profile.png"
