--- a/hugo.toml
+++ b/hugo.toml
@@ -14,8 +14,10 @@ enableRobotsTXT = true
 
 [params]
 author = "Dr Steve Moss"
-intro = "Scientist, technologist, engineer, and technical leader."
-description = "I help companies deploy their code into production. I write about distributed systems, tooling, and best practices."
+intro = "Scientist | Technologist | Engineer | Technical Leader"
+description = """I help companies deploy their code into production.
+
+I write about distributed systems, tooling, and best practices."""
 authorimage = "profile.png"
 dateformat = "2006-01-02 15:04:05"
 
