fix: use correct stackoverflow

--- a/hugo.toml
+++ b/hugo.toml
@@ -31,7 +31,7 @@ linkedin = "gawbul"
 googlescholar = "KD8T2ZwAAAAJ"
 orcid = "0000-0002-1399-293X"
 medium = "gawbul"
-stackoverflow = "gawbul"
+stackoverflow = "393634/gawbul"
 hackernews = "gawbul"
 steam = "gawbul"
 reddit = "g4wbul"
